--- a/MembershipListWPF/MembershipListWPF/MembershipListWPF.csproj
+++ b/MembershipListWPF/MembershipListWPF/MembershipListWPF.csproj
@@ -67,6 +67,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
